--- a/src/Editor.css
+++ b/src/Editor.css
@@ -5,8 +5,15 @@
     bottom: 0;
     left: 22rem;
     z-index: 1;
-    transition: padding .35s cubic-bezier(.4,0,.2,1);
-    padding-left: 22rem;
+    transition: padding .35s cubic-bezier(.4, 0, .2, 1);
     min-height: 100%;
-    background-color: #e0e0e0;
+}
+
+.container > div {
+    cursor: text;
+    font-size: 21px;
+    line-height: 33px;
+    min-height: 40px;
+    padding: 30px;
+
 }
